rectify logo description

--- a/FirstMeeting.ipynb
+++ b/FirstMeeting.ipynb
@@ -13,7 +13,7 @@
     "# BIENVENUE AU PREMIER MEETING DE ***Data Science CI***\n",
     "<div align='center'>\n",
     "\n",
-    "<img src=\"https://drive.google.com/uc?export=view&id=1wSyviJUVLG2dWNDek1610Lzs7lJ0m7kj\" alt=\"Girl in a jacket\" >\n",
+    "<img src=\"https://drive.google.com/uc?export=view&id=1wSyviJUVLG2dWNDek1610Lzs7lJ0m7kj\" alt=\"Data Science CI Logo\" >\n",
     "\n",
     "</div>"
    ]
